# tiny_engine2.0

glsl/: CMakeLists.txt  engine.cpp  engine.h  event.h  file.cpp  file.h  gl_core_4_3.cpp  main.cpp
glsl/render/: color.cpp  color.h  polygon.cpp  polygon.h  shader.cpp  shader.h  vertex.cpp  vertex.h
glsl/shaders/: basic.frag  basic.vert
